Project/infra/k8s/comment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments
  labels:
    app:  comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  comments
  template:
    metadata:
      labels:
        app:  comments
    spec:
      containers:
      - name: comments
        image: aishwaryaa/comments
  
---
kind: Service
apiVersion: v1
metadata:
  name:  comment-serv
spec:
  selector:
    app:  comments
  # type:  LoadBalancer | ClusterIP | NodePort
  ports:
  - protocol:  TCP
    port:  4002
    targetPort:  4002
