Project/infra/k8s/eventbus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus
  labels:
    app:  eventbus
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  eventbus
  template:
    metadata:
      labels:
        app:  eventbus
    spec:
      containers:
      - name: eventbus
        image: aishwaryaa/eventbus
  
---
kind: Service
apiVersion: v1
metadata:
  name:  eventbus-serv
spec:
  selector:
    app:  eventbus
  # type:  LoadBalancer | ClusterIP | NodePort
  ports:
  - protocol:  TCP
    port:  4005
    targetPort:  4005
